<?xml version="1.0"?>
<package>
  <name>ensenso_n35_description</name>
  <version>0.0.0</version>
  <description>Ensenso N35 description</description>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
</package>
