<?xml version="1.0"?>
<package format="2">
  <name>ur10_ensenso_extrinsic_calibration</name>
  <version>0.1.0</version>
  <description>Ensenso N10 (mounted on a robot arm) automatic extrinsic calibration procedure.</description>
  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>institut_maupertuis_robots_definitions</exec_depend>
</package>
